--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Resumes#index</h1>
-<p>Find me in app/views/resumes/index.html.erb</p>
+<h1><%= "#{current_user.email} Resumes" %></h1>
+
+<p><%if @resumes.length > 0 %>
+		<%@resumes.each do |resume| %>
+			<%=resume%>
+		<%end%>
+	<%end%>
+</p>
+
+
