Tested resumes index page

--- a/app/views/resumes/index.html.erb
+++ b/app/views/resumes/index.html.erb
@@ -2,7 +2,8 @@
 
 <p><%if @resumes.length > 0 %>
 		<%@resumes.each do |resume| %>
-			<%=resume%>
+			<%=resume.name%></br>
+			<%=resume.description%></br></br>
 		<%end%>
 	<%end%>
 </p>
