--- a/app/assets/stylesheets/resumes.css.scss
+++ b/app/assets/stylesheets/resumes.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the resumes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+*{ font-family: sans-serif}
+#resume_list 
+	td{ 
+		padding: 10px;
+		text-align: center;
+		border: 1px dashed gray
+		}
+	th{	padding: 10px;
+			border: 1px dashed gray
+		}
