Added edit resume feature(views, spec, controller)
*added id to tr in _resume form so capybara could access the edit link
in resume edit feature spec

--- a/app/views/resumes/_resume.html.erb
+++ b/app/views/resumes/_resume.html.erb
@@ -1,8 +1,8 @@
-<%= div_for resume do%>
-	<tr>
+<%= div_for resume, remote: true do%>
+	<tr id="<%=resume.id%>">
 		<td><%=resume.name%></td>
 		<td><%=resume.description%></td>
-		<td><%=link_to "Edit", edit_resume_path(resume)%></td>
+		<td><%=link_to "Edit", edit_resume_path(resume)%><td>
 		<td><%=link_to "Delete Resume", resume_path(resume), :method => 'delete'%></td>
 	</tr>
 <%end%>
